--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,12 +7,12 @@
     <section class="top valign-wrapper section scrollspy " id="top">
         <div class="container">
             <h1 class=" brand-logo white-text" id="logo">gigFinder</h1>
-            <a href="#choiceSection" class="center-align"><i class="material-icons white-text downArrow">arrow_downward</i></a>
+            <a href="#bottom" class="center-align"><i class="material-icons white-text downArrow">arrow_downward</i></a>
         </div>
 
 
     </section>
-    <section id="choiceSection" class="section scrollspy">
+    <section id="choiceSection" class="section scrollspy valign-wrapper">
         <div  class="choice center-align">
             <div class="row">
                 <div class="col s12 m6">
