--- a/src/main/resources/static/assets/css/styles.css
+++ b/src/main/resources/static/assets/css/styles.css
@@ -44,6 +44,7 @@
     background: -moz-linear-gradient(#200102, #2B3989); /* For Firefox 3.6 to 15 */
     background: linear-gradient(#200102, #2B3989); /* Standard syntax */
     margin: 0;
+    height: 100vh;
 }
 .choice{
     padding: 20px 0;
@@ -117,14 +118,14 @@ background: rgba(255,255,255,0.5);
 }
 .coverBanner{
     color: rgba(253, 109, 34, 0.75);
-    font-size: 2em;
+    font-size: 1em;
     margin-left: 20px;
     margin-top: 10px;
     background-color: rgba(56, 56, 56, 0.88);
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
     text-align: center;
     border: 1px solid lightgray;
 }
@@ -138,13 +139,14 @@ background: rgba(255,255,255,0.5);
     border-radius: 50%;
     top: 170px;
     left: 50px;
+    height: 250px;
 }
 #picParent{
     position: absolute;
     width: 250px;
     border: 2px solid lightgray;
     border-radius: 50%;
-    top: 170px;
+    top: 200px;
     left: 50px;
 }
 .profPic{
@@ -178,7 +180,7 @@ background: rgba(255,255,255,0.5);
     border-radius: 5px;
     width: 160%;
     text-align: center;
-    margin-left: -27px;
+    margin-left: -35px;
 }
 .musicInfo{
     position: relative;
@@ -190,7 +192,7 @@ background: rgba(255,255,255,0.5);
 }
 
 .profileBanner{
-    height: 250px;
+    height: 300px;
 
 }
 
@@ -202,7 +204,7 @@ background: rgba(255,255,255,0.5);
     background-color: rgba(48, 48, 48, 0.91);
     border-radius: 5px;
     border: 1px solid #000;
-    top: 110px;
+    top: 150px;
     left: 0;
     right: 0;
     margin-left: auto;
