--- a/src/main/resources/templates/includes.html
+++ b/src/main/resources/templates/includes.html
@@ -29,7 +29,7 @@
           today: 'Today',
           clear: 'Clear',
           close: 'Ok',
-          closeOnSelect: false// Close upon selecting a date,
+          closeOnSelect: false
       });
 
 
