--- a/src/main/resources/templates/createCompany.html
+++ b/src/main/resources/templates/createCompany.html
@@ -6,71 +6,75 @@
 <div th:include="navbar :: navHome"></div>
 
 <main class="container">
-    <form th:action="@{/signup/company/}" method="post">
-        <div th:object="${user}">
-            <div class="row">
-                <div class="input-field col s12">
-                    <label for="username">Username</label>
-                    <input id="username" type="text" th:field="*{username}"/>
-                </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <label for="password">Password</label>
-                    <input id="password" type="password" th:field="*{password}"/>
+    <div class="card-panel">
+        <h1>Sign Up</h1>
+        <form th:action="@{/signup/company/}" method="post">
+            <div th:object="${user}">
+                <div class="row">
+                    <div class="input-field col s12 m6">
+                        <label for="username">Username</label>
+                        <input id="username" type="text" th:field="*{username}"/>
+                    </div>
 
-                </div>
-            </div>
-        </div>
-        <div th:object="${companyProfile}">
+                    <div class="input-field col s12 m6">
+                        <label for="password">Password</label>
+                        <input id="password" type="password" th:field="*{password}"/>
 
-            <div class="row">
-                <div class="input-field col s12">
-                    <label for="name">Company Name</label>
-                    <input id="name" type="text" th:field="*{companyName}"/>
-                </div>
+                    </div>
 
             </div>
-            <div class="row">
-                <div class="input-field col s6">
-                    <label for="firstName">Contact First Name</label>
-                    <input id="firstName" type="text" th:field="*{companyContactFirstName}"/>
-                </div>
-                <div class="input-field col s6">
-                    <label for="lastName">Contact Last Name</label>
-                    <input id="lastName" type="text" th:field="*{companyContactLastName}"/>
-                </div>
             </div>
-            <div class="row">
-                <div class="input-field col l6">
-                    <input id="city" type="text" name="companyCity"/>
-                    <label for="city">City</label>
+            <div th:object="${companyProfile}">
+
+                <div class="row">
+                    <div class="input-field col s12">
+                        <label for="name">Company Name</label>
+                        <input id="name" type="text" th:field="*{companyName}"/>
+                    </div>
+
                 </div>
-                <div class="input-field col l3">
-                    <select name="companyState" id="state">
-                        <option value="" disabled="disabled" selected="selected">State</option>
-                        <option th:each="states : ${states}" th:value="${states.abbreviation}">[[${states.name}]] - [[${states.abbreviation}]]</option>
-                    </select>
+                <div class="row">
+                    <div class="input-field col s12 m6">
+                        <label for="firstName">Contact First Name</label>
+                        <input id="firstName" type="text" th:field="*{companyContactFirstName}"/>
+                    </div>
+                    <div class="input-field col s12 m6">
+                        <label for="lastName">Contact Last Name</label>
+                        <input id="lastName" type="text" th:field="*{companyContactLastName}"/>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s6">
-                    <label for="pNumber">Contact Phone Number</label>
-                    <input id="pNumber" type="text" th:field="*{phoneNumber}"/>
+                <div class="row">
+                    <div class="input-field col s6">
+                        <input id="city" type="text" name="companyCity"/>
+                        <label for="city">City</label>
+                    </div>
+                    <div class="input-field col s6 m4">
+                        <select name="companyState" id="state">
+                            <option value="" disabled="disabled" selected="selected">State</option>
+                            <option th:each="states : ${states}" th:value="${states.abbreviation}">[[${states.name}]] - [[${states.abbreviation}]]</option>
+                        </select>
+                    </div>
                 </div>
-                <div class="input-field col s6">
-                    <label for="email"> Contact Email</label>
-                    <input id="email" type="email" th:field="*{email}"/>
+                <div class="row">
+                    <div class="input-field col s12 m6">
+                        <label for="pNumber">Contact Phone Number</label>
+                        <input id="pNumber" type="text" th:field="*{phoneNumber}"/>
+                    </div>
+                    <div class="input-field col s12 m6">
+                        <label for="email"> Contact Email</label>
+                        <input id="email" type="email" th:field="*{email}"/>
+                    </div>
                 </div>
+
             </div>
 
-        </div>
+            <button class="waves-effect waves-light btn" type="submit" >Create Profile</button>
 
-        <button class="waves-effect waves-light btn" type="submit" >Create Profile</button>
-
-    </form>
+        </form>
+    </div>
 </main>
 <div th:include="footer :: footer"></div>
+<div th:include="modals :: signupModal"></div>
 
 <span th:include="includes :: js"></span>
 </body>
