--- a/src/main/resources/templates/createGig.html
+++ b/src/main/resources/templates/createGig.html
@@ -6,59 +6,77 @@
 <div th:include="navbar :: navHome"></div>
 
 <main class="container" th:inline="text">
-    <form th:action="@{/company/create-gig/}" method="post" th:object="${gig}" enctype="multipart/form-data">
-        <div class="row">
-            <div class="input-field col s12">
-                <label for="location">Street</label>
-                <input id="location" type="text" name="locationStreet" class="autocomplete"/>
-            </div>
+    <div class="card-panel">
+        <h1>Create Gig</h1>
 
-            <div class="input-field col s6">
-                <input id="city" type="text" name="locationCity"/>
-                <label for="city">City</label>
-            </div>
-            <div class="input-field col s3">
-                <select name="locationState" id="state">
-                    <option value="" disabled="disabled" selected="selected">State</option>
-                    <option th:each="states : ${states}" th:value="${states.abbreviation}">[[${states.name}]] - [[${states.abbreviation}]]</option>
-                </select>
-            </div>
+        <form th:action="@{/company/create-gig/}" method="post" th:object="${gig}" enctype="multipart/form-data">
+            <div class="row">
+                <div class="input-field col s12">
+                    <label for="title">Title</label>
+                    <input id="title" type="text" th:field="*{gigTitle}" data-length="40"/>
 
-            <div class="input-field col s3">
-                <input id="zip" type="text" name="locationZip" maxlength="5" minlength="5"/>
-                <label for="zip">Zip Code</label>
+                </div>
             </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <label for="description">Description</label>
+                    <input id="description" type="text" th:field="*{gigDescription}" data-length="140"/>
 
-        </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <label for="location">Street</label>
+                    <input id="location" type="text" name="locationStreet" class="autocomplete"/>
+                </div>
+
+                <div class="input-field col s6">
+                    <input id="city" type="text" name="locationCity"/>
+                    <label for="city">City</label>
+                </div>
+                <div class="input-field col s3">
+                    <select name="locationState" id="state">
+                        <option value="" disabled="disabled" selected="selected">State</option>
+                        <option th:each="states : ${states}" th:value="${states.abbreviation}">[[${states.name}]] - [[${states.abbreviation}]]</option>
+                    </select>
+                </div>
+
+                <div class="input-field col s3">
+                    <input id="zip" type="text" name="locationZip" maxlength="5" minlength="5"/>
+                    <label for="zip">Zip Code</label>
+                </div>
+
+            </div>
 
             <div class="input-field col s12">
                 <select th:field="*{gigType}" id="type">
+                    <option value="" disabled="disabled" selected="selected">Type of Gig</option>
                     <option th:each="gigType : ${gigTypes}" th:value="${gigType.type}">[[${gigType.type}]]</option>
                 </select>
-                <label for="type">Type of Gigs</label>
+                <label for="type">Type of Gig</label>
             </div>
-        <div class="row">
-            <div class="input-field col s6">
-                <label for="start">Start</label>
-                <input id="start" type="date" class="datepicker" th:field="*{gigStart}"/>
+            <div class="row">
+                <div class="input-field col s6">
+                    <label for="start">Start</label>
+                    <input id="start" type="date" class="datepicker" th:field="*{gigStart}"/>
+                </div>
+                <div class="input-field col s6">
+                    <label for="end">End</label>
+                    <input id="end" type="date" class="datepicker" th:field="*{gigEnd}"/>
+                </div>
             </div>
-            <div class="input-field col s6">
-                <label for="end">End</label>
-                <input id="end" type="date" class="datepicker" th:field="*{gigEnd}"/>
+            <div class="row">
+                <div class="input-field col s12">
+                    <label for="gigArt">Image URL</label>
+                    <input type="url"  id="gigArt" th:field="*{gigArt}" placeholder="Image URL"/>
+                </div>
             </div>
-        </div>
 
-        <div class="row">
-            <div class="input-field col s12">
-                <label for="description">Description</label>
-                <input id="description" type="text" th:field="*{gigDescription}"/>
+            <button class="waves-effect waves-light btn" type="submit" >Create Gig</button>
 
-            </div>
-        </div>
+        </form>
+    </div>
 
-        <button class="waves-effect waves-light btn" type="submit" >Create Gig</button>
-
-    </form>
 </main>
 <div th:include="footer :: footer"></div>
 
